--- a/app/package.json
+++ b/app/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "exercise-app",
+  "name": "database-admin-app",
   "version": "0.1.0",
   "private": true,
   "proxy": "http://localhost:3000",
