--- a/app/package.json
+++ b/app/package.json
@@ -13,6 +13,7 @@
     "react-bootstrap": "^2.2.1",
     "react-dom": "^17.0.2",
     "react-icons": "^4.3.1",
+    "react-router": "^6.3.0",
     "react-router-dom": "^6.2.2",
     "react-script": "^2.0.5",
     "react-scripts": "5.0.0",
@@ -22,7 +23,7 @@
     "predeploy": "npm run build",
     "deploy": "gh-pages -d build",
     "start": "react-scripts start",
-    "build": "react-scripts build && cp build/index.html build/404.html",
+    "build": "react-scripts build",
     "test": "react-scripts test",
     "eject": "react-scripts eject"
   },
