--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -10,5 +10,7 @@ jobs:
     runs-on: ubuntu-latest
     steps:
       - uses: actions/checkout@v2
-      - run: npm install
-      - run: npm run deploy
+      - run: | 
+          cd app
+          npm install
+          npm run deploy
