--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -12,5 +12,5 @@ jobs:
       - uses: actions/checkout@v2
       - run: | 
           cd app
-          npm install
+          npm ci
           npm run deploy
