--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -14,6 +14,7 @@ jobs:
       - uses: actions/checkout@v2
       - name: npm ci and build
         run: |
+          cd app
           npm ci
           npm run build --if-present  
       - name: deploy to gh-pages
