--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -16,7 +16,7 @@ jobs:
         run: |
           cd app
           npm ci
-          npm run build --if-present  
+          CI=false npm run build --if-present  
       - name: deploy to gh-pages
         uses: peaceiris/actions-gh-pages@v3
         with:
