--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -23,15 +23,16 @@ jobs:
               deploy_key: ${{ secrets.ACTIONS_DEPLOY_KEY }}
               publish_dir: ./app/build
     deploy-to-osu-server:
-      - name: Install SSH key
-        uses: shimataro/ssh-key-action@v2
-        with:
-          key: ${{ secrets.SSH_KEY }}
-          name: id_rsa
-          known_hosts: ${{ secrets.KNOWN_HOSTS }}
-          config: ${{ secrets.CONFIG }}
-          if_key_exists: fail # replace / ignore / fail; optional (defaults to fail)
-      - name: list contents of home dir
-        run: |
-          ssh doironj@flip1.engr.oregonstate.edu
-          ls -a
+      steps:
+        - name: Install SSH key
+          uses: shimataro/ssh-key-action@v2
+          with:
+            key: ${{ secrets.SSH_KEY }}
+            name: id_rsa
+            known_hosts: ${{ secrets.KNOWN_HOSTS }}
+            config: ${{ secrets.CONFIG }}
+            if_key_exists: fail # replace / ignore / fail; optional (defaults to fail)
+        - name: list contents of home dir
+          run: |
+            ssh doironj@flip1.engr.oregonstate.edu
+            ls -a
