testing OSU connection for deployment

--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -35,4 +35,5 @@ jobs:
       - name: list contents of home dir
         run: |
           ssh doironj@flip1.engr.oregonstate.edu
+          pwd
           ls -a
