--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -15,12 +15,21 @@ jobs:
           run: |
             cd app
             npm ci
-            CI=false npm run build --if-present  
+            CI=false npm run build-gh-pages --if-present  
         - name: deploy to gh-pages
           uses: peaceiris/actions-gh-pages@v3
           with:
             deploy_key: ${{ secrets.ACTIONS_DEPLOY_KEY }}
             publish_dir: ./app/build
+  deploy-to-osu-server:
+      runs-on: ubuntu-latest
+      steps:
+        - uses: actions/checkout@v2
+        - name: npm ci and build
+          run: |
+            cd app
+            npm ci
+            CI=false npm run build --if-present 
         - name: Install SSH key
           uses: shimataro/ssh-key-action@v2
           with:
