--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -22,6 +22,7 @@ jobs:
             deploy_key: ${{ secrets.ACTIONS_DEPLOY_KEY }}
             publish_dir: ./app/build
   deploy-to-osu-server:
+      needs: deploy-to-gh-pages
       runs-on: ubuntu-latest
       steps:
         - uses: actions/checkout@v2
