--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -11,7 +11,7 @@ jobs:
     runs-on: ubuntu-latest
     steps:
         - uses: actions/checkout@v2
-        - name: npm ci and build
+        - name: npm ci and deploy-gh-pages
           run: |
             cd app
             npm ci
