Revert "updated script alias"
This reverts commit 1f1a7309921777fdf5d33e7bce44c400f4540c91.

--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -11,7 +11,7 @@ jobs:
     runs-on: ubuntu-latest
     steps:
         - uses: actions/checkout@v2
-        - name: npm ci and deploy-gh-pages
+        - name: npm ci and build
           run: |
             cd app
             npm ci
