--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -15,7 +15,7 @@ jobs:
           run: |
             cd app
             npm ci
-            CI=false npm run deploy --if-present  
+            CI=false npm run build --if-present  
         - name: deploy to gh-pages
           uses: peaceiris/actions-gh-pages@v3
           with:
