fixing public url for osu server

--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -31,6 +31,8 @@ jobs:
             cd app
             npm ci
             CI=false npm run build --if-present 
+          env:
+            PUBLIC_URL: http://flip1.engr.oregonstate.edu/nfs/stak/users/doironj/cs340/final-project
         - name: Install SSH key
           uses: shimataro/ssh-key-action@v2
           with:
