--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -31,8 +31,8 @@ jobs:
             cd app
             npm ci
             npm install -g json
-            json -I -f app/package.json -e "this.homepage=\"http://flip1.engr.oregonstate.edu/nfs/stak/users/doironj/cs340/final-project\""
-            cat app/package.json
+            json -I -f package.json -e "this.homepage=\"http://flip1.engr.oregonstate.edu/nfs/stak/users/doironj/cs340/final-project\""
+            cat package.json
             CI=false npm run build --if-present 
         - name: Install SSH key
           uses: shimataro/ssh-key-action@v2
