--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -31,9 +31,10 @@ jobs:
             cd app
             npm ci
             npm install -g json
-            json -I -f package.json -e "this.homepage=\"http://flip1.engr.oregonstate.edu/nfs/stak/users/doironj/cs340/final-project\""
+            json -I -f package.json -e "this.homepage=\"http://flip1.engr.oregonstate.edu:1521/nfs/stak/users/doironj/cs340/final-project\""
             cat package.json
-            CI=false npm run build --if-present 
+            CI=false npm run build --if-present
+            cat build/index.html
         - name: Install SSH key
           uses: shimataro/ssh-key-action@v2
           with:
