--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -31,7 +31,7 @@ jobs:
             cd app
             npm ci
             npm install -g json
-            json -I -f package.json -e "this.homepage=\"http://flip1.engr.oregonstate.edu:1521/nfs/stak/users/doironj/cs340/final-project\""
+            json -I -f package.json -e "this.homepage=\"http://flip1.engr.oregonstate.edu""
             cat package.json
             CI=false npm run build --if-present
             cat build/index.html
@@ -45,4 +45,4 @@ jobs:
             if_key_exists: fail # replace / ignore / fail; optional (defaults to fail)
         - name: Deploy to OSU Server
           run: |
-            scp -r ./app/build doironj@flip1.engr.oregonstate.edu:~/cs340
+            scp -r ./app/build doironj@flip1.engr.oregonstate.edu:~/cs340/final-project
