--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -31,7 +31,7 @@ jobs:
             cd app
             npm ci
             npm install -g json
-            json -I -f package.json -e "this.homepage=\"http://flip1.engr.oregonstate.edu""
+            json -I -f package.json -e "this.homepage=\"http://flip1.engr.oregonstate.edu\""
             cat package.json
             CI=false npm run build --if-present
             cat build/index.html
