--- a/app/package.json
+++ b/app/package.json
@@ -17,6 +17,7 @@
     "react-router-dom": "^6.2.2",
     "react-script": "^2.0.5",
     "react-scripts": "5.0.0",
+    "react-select": "^5.3.2",
     "web-vitals": "^2.1.4"
   },
   "scripts": {
