Deploy: installing packages on server

--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -35,3 +35,14 @@ jobs:
           run: |
             scp -r ./app/build doironj@flip1.engr.oregonstate.edu:~/cs340/final-project
             scp -r ./backend doironj@flip1.engr.oregonstate.edu:~/cs340/final-project
+        - name: install packages on server
+          uses: garygrossgarten/github-action-ssh@release
+          with:
+            command: |
+              cd cs340/final-project/app
+              npm install
+              cd ../backend
+              npm install
+            host: flip1.engr.oregonstate.edu
+            username: doironj
+            privateKey: ${{ secrets.PRIVATE_KEY}}
