--- a/app/package.json
+++ b/app/package.json
@@ -9,11 +9,13 @@
     "@testing-library/react": "^12.1.3",
     "@testing-library/user-event": "^13.5.0",
     "bootstrap": "^5.1.3",
+    "moment": "^2.29.3",
     "react": "^17.0.2",
     "react-bootstrap": "^2.2.1",
     "react-dom": "^17.0.2",
     "react-icons": "^4.3.1",
     "react-loader-spinner": "^6.0.0-0",
+    "react-moment": "^1.1.2",
     "react-router": "^6.3.0",
     "react-router-dom": "^6.2.2",
     "react-script": "^2.0.5",
